--- a/www/main.css
+++ b/www/main.css
@@ -1,85 +1,94 @@
+/* Import Google font - Poppins */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: lightblue;
-}
-
-h1 {
-    margin-bottom: 8%;
-    text-align: center;
-}
-
-p {
-    margin-top: 5%;
-    margin-bottom: 5%;
+    min-height: 100vh;
     width: 100%;
-    text-align: center;
-    border-bottom: 1px solid #000;
-    line-height: 0.1em;
+    background: #222D32;
 }
 
-p span {
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 430px;
+    width: 100%;
     background: #fff;
-    padding: 0 10px;
+    border-radius: 7px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-input {
-    margin-bottom: 3%;
-}
-
-input:last-of-type {
-    margin-bottom: 0;
-}
-
-input,
-button {
-    padding: 3%;
-    width: 100%;
-}
-
-.login-container {
-    background-color: white;
-    padding: 7%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    /* horizontal align */
-    width: 40vw;
-    margin-left: 30vw;
-    /* vertical align */
-    height: 70vh;
-    margin-top: 15vh;
-}
-
-#create-acct {
+.container .registration {
     display: none;
 }
 
-button:hover {
+.container .forgot {
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+.container .form {
+    padding: 2rem;
+}
+
+.form header {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.form input {
+    height: 50px;
+    width: 100%;
+    padding: 0 15px;
+    font-size: 17px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    outline: none;
+}
+
+.form input:focus {
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.form input.button {
+    color: #fff;
+    background: #009579;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-top: 15px;
     cursor: pointer;
-    opacity: 0.8;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 
-#submit,
-#create-acct-btn {
-    background-color: #0583D2;
-    color: white;
-    border: none;
-    margin-top: 5%;
+.form input.button:hover {
+    background: #006653;
 }
 
-#return-btn {
-    background: none;
-    color: grey;
+.signup {
+    font-size: 17px;
+    text-align: center;
+}
+
+.signup a {
+    color: #009579;
+    cursor: pointer;
+}
+
+.signup a:hover {
     text-decoration: underline;
-    border: none;
-    margin-top: 3%;
-}
-
-#sign-up {
-    border: none;
 }
